# Pilot

./: .gitignore  AGENTS.md  Makefile  dev_server.py  pilot-os-spec.md  pyproject.toml  requirements.txt
os/: config.txt  first-boot.sh  fstab  hdmi-detect.rules  hdmi-detect.sh  journald.conf  nftables.conf  pilot-reconfigure.sh  pilot-update.sh  zram-setup.sh
os/tmpfiles.d/: pilot.conf
src/pilot_common/: __init__.py  config.py  constants.py  crypto.py  db.py  models.py  notify.py
src/pilot_dashboard/: __init__.py  app.py  main.py
src/pilot_dashboard/routes/: __init__.py  (+9 more)
src/pilot_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pilot_setup/: __init__.py  app.py  main.py
src/pilot_sync/: __init__.py  backup.py  gdrive.py  main.py  usb_storage.py
src/pilot_watchdog/: __init__.py  checks.py  main.py  recovery.py
src/tesla_poller/: __init__.py  api_client.py  data_recorder.py  efficiency.py  main.py  session_detector.py  sleep_guard.py  state_manager.py
systemd/: pilot-dashboard.service  pilot-first-boot.service  pilot-kiosk.service  pilot-setup.service  pilot-sync.service  pilot-sync.timer  pilot-watchdog.service  tesla-poller.service
tests/: conftest.py  test_api_client.py  test_config.py  test_crypto.py  test_dashboard_api.py  test_data_recorder.py  test_db.py  test_efficiency.py  test_notify.py  test_session_detector.py  test_setup_wizard.py  test_sleep_guard.py  test_state_manager.py  test_sync.py  test_watchdog.py
tests/fixtures/: vehicle_data_charging.json  vehicle_data_driving.json  vehicle_data_idle.json  vehicles_list.json
(+35 files in other folders)
