[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-os"
version = "1.0.0"
description = "Tesla vehicle data logger and dashboard appliance OS for Raspberry Pi"
requires-python = ">=3.11"
license = {text = "TBD"}
authors = [{name = "RTCK"}]
dependencies = [
    "httpx>=0.27,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "fastapi>=0.111,<1.0",
    "jinja2>=3.1,<4.0",
    "aiosqlite>=0.20,<1.0",
    "cryptography>=42.0,<44.0",
    "qrcode[pil]>=7.4,<8.0",
    "websockets>=12.0,<14.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx",  # TestClient needs it
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
